--- a/src/Vasageld.Common/Vasageld.Common.csproj
+++ b/src/Vasageld.Common/Vasageld.Common.csproj
@@ -45,10 +45,12 @@
     <Compile Include="..\Common\CommonVersionInfo.cs">
       <Link>Properties\CommonVersionInfo.cs</Link>
     </Compile>
+    <Compile Include="AssemblyVersionAttributeType.cs" />
     <Compile Include="Extensions\VersionExtensions.cs" />
     <Compile Include="IIncrementor.cs" />
     <Compile Include="IIncrementorsFactory.cs" />
     <Compile Include="IncrementationResult.cs" />
+    <Compile Include="IVersionsDictionary.cs" />
     <Compile Include="IVersionsProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Versions.cs" />
