--- a/src/Vasageld.Core/Vasageld.Core.csproj
+++ b/src/Vasageld.Core/Vasageld.Core.csproj
@@ -66,7 +66,6 @@
     <Compile Include="..\Common\CommonVersionInfo.cs">
       <Link>Properties\CommonVersionInfo.cs</Link>
     </Compile>
-    <Compile Include="AssemblyVersionAttributeType.cs" />
     <Compile Include="DefaultFileSystem.cs" />
     <Compile Include="FileIncrementor.cs" />
     <Compile Include="IncrementorsFactory.cs" />
@@ -87,6 +86,7 @@
     <Compile Include="Utils\AttributeVisitor.cs" />
     <Compile Include="Utils\AttributeVisitorResult.cs" />
     <Compile Include="Utils\TypeWrapperEqualityComparer.cs" />
+    <Compile Include="SafeVersionsDictionary.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vasageld.Common\Vasageld.Common.csproj">
